--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "icon": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/merrcurys"
+    "url": "https://github.com/Merrcurys/Oxygen-Theme"
   },
   "keywords": [
     "theme",
